--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6"
   },
@@ -25,11 +26,13 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "camelcase": "^6.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
@@ -40,7 +43,8 @@
     "jest-watch-typeahead": "^2.2.2",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "resolutions": {
     "styled-components": "^5"
@@ -48,7 +52,7 @@
   "engines": {
     "node": ">=18",
     "npm": "\n\n🛑🛑 you must use `yarn` 🛑🛑\n\n",
-    "yarn": ">=1.22.19"
+    "yarn": ">=1.22.17"
   },
   "volta": {
     "node": "18.11.0"
